--- a/Task 1 - MultiQueueSimulation/MultiQueueSimulation/MultiQueueModels/MultiQueueModels.csproj
+++ b/Task 1 - MultiQueueSimulation/MultiQueueSimulation/MultiQueueModels/MultiQueueModels.csproj
@@ -48,6 +48,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Enums.cs" />
+    <Compile Include="Methods.cs" />
     <Compile Include="PerformanceMeasures.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="SimulationCase.cs" />
